--- a/Properties.Api/appsettings.Development.json
+++ b/Properties.Api/appsettings.Development.json
@@ -8,6 +8,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "" // <-- Add your connection string here
   },
+  "Azure": {
+    "BlobStorage": {
+      "ConnectionString": "", // <-- Add your connection string here
+      "ContainerName": "images"
+    }
+  },
   "Serilog": {
     "Using": [
       "Serilog.Sinks.Console"
