--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,5 +44,5 @@ jobs:
       - name: Restore dependencies
         run: dotnet restore
 
-      - name: Run tests
-        run: dotnet test --no-build --configuration Release --collect:"XPlat Code Coverage"
+      - name: Run tests with coverage
+        run: dotnet test ./Properties.Unitests/Properties.Unitests.csproj --configuration Release --collect:"XPlat Code Coverage"
