Add: JWT Security Configuration

--- a/Properties.Api/appsettings.json
+++ b/Properties.Api/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Jwt": {
+    "Secret": "super-duper-secret-value-that-should-be-in-user-secrets",
+    "Audience": "developers",
+    "Issuer": "Properties",
+    "ExpirationInMinutes": 10
+  },
   "AllowedHosts": "*"
 }
