Gral: Se crean endpoints para obtener owner y properties por Id

--- a/Properties.Api/Properties.Api.csproj
+++ b/Properties.Api/Properties.Api.csproj
@@ -25,4 +25,8 @@
     <ProjectReference Include="..\Properties.Infraestructure\Properties.Infraestructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <InternalsVisibleTo Include="Properties.IntegrationTests" />
+  </ItemGroup>
+
 </Project>
