--- a/Properties.Api/appsettings.json
+++ b/Properties.Api/appsettings.json
@@ -11,5 +11,14 @@
     "Issuer": "Properties",
     "ExpirationInMinutes": 10
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "" // <-- Add your connection string here
+  },
+  "Azure": {
+    "BlobStorage": {
+      "ConnectionString": "", // <-- Add your connection string here
+      "ContainerName": ""
+    }
+  },
   "AllowedHosts": "*"
 }
